--- a/src/css/index.css
+++ b/src/css/index.css
@@ -113,6 +113,7 @@ main {
   font-size: var(--font-size-reg);
   position: relative;
   z-index: 100;
+  color: var(--clr-light-blue);
 }
 
 .raised-link {
@@ -122,7 +123,11 @@ main {
   transform: translateX(-50%);
   z-index: 500;
   transition: var(--app-transition);
-  color: var(--clr-light-blue);
+}
+
+.experience-list {
+  text-align: center;
+  
 }
 .raised-link a{
   transition: var(--app-transition);
@@ -143,6 +148,8 @@ main {
 .open > *:not(.expanded) {
   flex: 0;
 }
+
+
 .reviews-list {
   display: flex;
   flex-direction: column;
@@ -156,6 +163,9 @@ main {
 .info-icon {
   margin-left: 10px;
 }
+
+
+
 
 .splash-link {
   display: flex;
@@ -199,15 +209,22 @@ main {
   background: var(--clr-drk);
   padding: 1rem 0;
   margin-top: 2rem;
+  position: relative;
 }
 
 .marquee {
   display: inline-block;
-  padding-left: 100%;
-  animation: scroll-left 20s linear infinite;
+  white-space: nowrap;
+  animation: scroll-left 30s linear infinite; 
   font-weight: bold;
   color: lightgreen;
 }
+
+.marquee-content {
+  display: inline-block;
+  padding-right: 2rem; 
+}
+
 
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(10px); }
