--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -114,17 +114,14 @@ ul {
   z-index: 1;
 }
 
-
-button {
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  vertical-align: baseline;
-  background-clip: padding-box;
-  text-decoration: none;
-  margin: 0;
-
+.no-select {
+  -webkit-user-select: none; /* Chrome, Safari */
+  -moz-user-select: none;    /* Firefox */
+  -ms-user-select: none;     /* Internet Explorer/Edge */
+  user-select: none;         /* Standard */
 }
+
+
 
 .btn {
   height: fit-content;
@@ -168,4 +165,37 @@ button {
 
 .icon-hover:hover {
    filter: brightness(1.3);
+}
+.z1 {
+  z-index: 1;
+}
+.z2 {
+  z-index: 2;
+}
+
+.z3 {
+  z-index: 3;
+}
+
+.z4 {
+  z-index: 4;
+}
+
+.z5 {
+  z-index: 5;
+}
+
+.z6 {
+  z-index: 6;
+}
+
+.z7 {
+  z-index: 7;
+}
+
+.z8 {
+  z-index: 8;
+}
+.z100 {
+  z-index: 100;
 }
