--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -8,6 +8,7 @@
   --clr-bg: #001522;
   --clr-light: #fefefe;
   --clr-light-blue: #d8e7ff;
+  --clr-green: #90ee90;
   --clr-blue: #60d;
   --clr-primary: #f37121;
   --clr-hover: #e96240;
@@ -29,7 +30,7 @@
   --app-box-shadow-raised: 0 6px 14px rgba(0,0,0,0.15);
   --font-size-small: 0.8rem;
   --font-size-reg: 1.4rem;
-  --font-size-subtitle: 2.8rem;
+  --font-size-subtitle: 2.4rem;
   --font-size-title: 5rem;
 }
 
