--- a/src/css/index.css
+++ b/src/css/index.css
@@ -153,6 +153,34 @@ main {
   font-size: 1.6rem;
   margin-top: var(--app-spacing);
 }
+
+.easter-egg {
+  min-height: 100svh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--clr-light-blue);
+}
+.easter-egg h4 {
+  font-size: var(--font-size-subtitle);
+}
+.easter-egg p {
+  font-size: var(--font-size-reg);
+  margin-bottom: var(--app-spacing);
+}
+.easter-egg-icon {
+  font-size: var(--font-size-title);
+}
+
+.collaboration-list {
+  min-height: 100svh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 @media(max-width: 800px) {
   .small-title {
     font-size: 1.4rem;
