--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -30,8 +30,10 @@
   --app-box-shadow-raised: 0 6px 14px rgba(0,0,0,0.15);
   --font-size-small: 0.8rem;
   --font-size-reg: 1.4rem;
-  --font-size-subtitle: 2rem;
+  --font-size-subtitle: 2.2rem;
   --font-size-title: 5rem;
+  --font-size-title-code: 3rem;
+
 }
 
 @media(max-width: 800px) {
@@ -40,18 +42,22 @@
 
   --small-font-size: 0.8rem;
   --font-size-reg: 1.2rem;
-  --font-size-subtitle: 2.4rem;
-  --font-size-title: 4rem;  }
+  --font-size-subtitle: 2rem;
+  --font-size-title: 4rem;
+  --font-size-title-code: 2.4rem;
+  }
 }
 
 @media(max-width: 500px) {
   :root {
-    --app-spacing: 10px;
+  --app-spacing: 10px;
 
   --small-font-size: 0.6rem;
   --font-size-reg: 1rem;
-  --font-size-subtitle: 1.8rem;
-  --font-size-title: 3rem;  }
+  --font-size-subtitle: 1.6rem;
+  --font-size-title: 3rem;
+  --font-size-title-code: 1.8rem;
+}
 }
 @media(max-width: 900px) {
   .small-hide {
@@ -166,37 +172,4 @@ ul {
 
 .icon-hover:hover {
    filter: brightness(1.3);
-}
-.z1 {
-  z-index: 1;
-}
-.z2 {
-  z-index: 2;
-}
-
-.z3 {
-  z-index: 3;
-}
-
-.z4 {
-  z-index: 4;
-}
-
-.z5 {
-  z-index: 5;
-}
-
-.z6 {
-  z-index: 6;
-}
-
-.z7 {
-  z-index: 7;
-}
-
-.z8 {
-  z-index: 8;
-}
-.z100 {
-  z-index: 100;
 }
