--- a/src/css/hero-banner.css
+++ b/src/css/hero-banner.css
@@ -119,10 +119,11 @@ h4 {
   background-image: url("../media/img/hexagon-solid.svg");
 }
 .small-solid-orange-hex-two {
-  top: 200px;
+  top: 200px; /*Add transparency*/
   right: 150px;
-  width: 230px;
-  height: 200px;
+  width: 280px;
+  height: 250px;
+    filter: blur(3px) opacity(0.9);
   background-image: url("../media/img/hexagon-solid.svg");
 }
 .large-dark-blur-hex {
