--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -52,8 +52,9 @@
   :root {
   --app-spacing: 10px;
 
-  --small-font-size: 0.6rem;
+  --font-size-small: 0.6rem;
   --font-size-reg: 1rem;
+
   --font-size-subtitle: 1.6rem;
   --font-size-title: 3rem;
   --font-size-title-code: 1.8rem;
