--- a/src/css/pages/partial-pages.css
+++ b/src/css/pages/partial-pages.css
@@ -1,9 +1,7 @@
 @charset "utf-8";
-
-.orange-text {
-  color: var(--clr-primary);
-}
-
+/*----------------------------------------------------------->
+  Releases Page
+<------------------------------------------------------------*/
 .releases-wrapper {
   min-height: 100svh;
   font-family: "Kode Mono";
@@ -32,7 +30,6 @@
   margin: var(--app-spacing);
 }
 
-
 .release-text:not(.w-100) {
   width: 400px;
   text-align: center;
@@ -52,6 +49,8 @@
 .release-text a:hover {
   color: var(--clr-primary);
 }
+
+/* ---- Break Points ----*/
 @media(orientation: portrait){
   .releases-wrapper article {
     flex-direction: column;
@@ -67,4 +66,53 @@
   .release-text p, .release-text h4{
     width: 300px;
   }
+}
+
+/*----------------------------------------------------------->
+  Something Else page
+<------------------------------------------------------------*/
+.easter-egg {
+  min-height: 100svh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--clr-light-blue);
+}
+.easter-egg h4 {
+  font-size: var(--font-size-subtitle);
+}
+.easter-egg p {
+  font-size: var(--font-size-reg);
+  margin-bottom: var(--app-spacing);
+}
+.easter-egg-icon {
+  font-size: var(--font-size-title);
+}
+
+/*----------------------------------------------------------->
+  Collaborators Page
+<------------------------------------------------------------*/
+.collaboration-list {
+  min-height: 100svh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/*----------------------------------------------------------->
+  About Page (with article.css)
+<------------------------------------------------------------*/
+.about-contact {
+  font-size: var(--font-size-subtitle);
+  text-align: center;
+  cursor: pointer;
+}
+.about-contact a {
+  color: var(--clr-light-blue);
+  transition: var(--app-transition);
+}
+.about-contact a:hover {
+  color: var(--clr-primary);
 }
