--- a/src/css/roots.css
+++ b/src/css/roots.css
@@ -4,6 +4,7 @@
   Roots
 <-----------------------------------------------------------*/
 :root {
+    /* ---- Colours ----*/
   --clr-drk: #010518;
   --clr-bg: #001522;
   --clr-light: #fefefe;
@@ -14,6 +15,7 @@
   --clr-hover: #e96240;
   --clr-tan: #ffd484;
   --clr-blur-bg: #e6efff0c;
+    /* ---- Clip Paths ----*/
   --app-clip-hex: polygon(
     25% 0, 
     75% 0, 
@@ -22,24 +24,26 @@
     25% 100%, 
     0 50%
     ); 
+      /* ---- Applied Styles ----*/
   --app-spacing: 25px;
   --app-spacing-tiny: 3px;
   --app-border-rad: 6px;
   --app-transition: all 0.3s ease-in-out;
   --app-box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   --app-box-shadow-raised: 0 6px 14px rgba(0,0,0,0.15);
+    /* ---- Font Sizes ----*/
   --font-size-small: 0.8rem;
   --font-size-reg: 1.4rem;
   --font-size-subtitle: 2.2rem;
   --font-size-title: 5rem;
   --font-size-title-code: 3rem;
-
 }
 
 @media(max-width: 800px) {
   :root {
+    /* ---- Applied Styles ----*/
   --app-spacing: 15px;
-
+    /* ---- Font Sizes ----*/
   --small-font-size: 0.8rem;
   --font-size-reg: 1.2rem;
   --font-size-subtitle: 2rem;
@@ -50,127 +54,13 @@
 
 @media(max-width: 500px) {
   :root {
+    /* ---- Applied Styles ----*/
   --app-spacing: 10px;
-
+    /* ---- Font Sizes ----*/
   --font-size-small: 0.6rem;
   --font-size-reg: 1rem;
-
   --font-size-subtitle: 1.6rem;
   --font-size-title: 3rem;
   --font-size-title-code: 1.8rem;
 }
-}
-@media(max-width: 900px) {
-  .small-hide {
-    display: none;
-    opacity: 0;
-  }
-}
-/*----------------------------------------------------------->
-  Utility Functions
-<-----------------------------------------------------------*/
-ul {
-  list-style: none;
-  padding: 0;
-  padding-left: 10px;
-}
-.container {
-  width: min(100% - 30px, 1200px);
-  margin-inline: auto;
-}
-
-.flex {
-  display: flex;
-}
-
-.f-col {
-  display: flex;
-  flex-direction: column;
-}
-
-.hidden {
-  display: none;
-  opacity: 0;
-}
-
-.circle {
-  border-radius: 50%;
-}
-
-.center {
-  justify-content: center;
-  align-items: center;
-}
-.mt-75 {
-  margin-top: 50px;
-}
-.mb-10 {
-  margin-bottom: 10px;
-}
-.w-100 {
-  width: 100%;
-}
-.h-100 {
-  height: 100%;
-}
-
-.space-between {
-  justify-content: space-between;
-}
-.pos-rel {
-  position: relative;
-  z-index: 1;
-}
-
-.no-select {
-  -webkit-user-select: none; /* Chrome, Safari */
-  -moz-user-select: none;    /* Firefox */
-  -ms-user-select: none;     /* Internet Explorer/Edge */
-  user-select: none;         /* Standard */
-}
-
-
-
-.btn {
-  height: fit-content;
-  width: fit-content;
-  align-items: center;
-  background-color: var(--clr-primary);
-  border: 1px solid transparent;
-  border-radius: var(--app-border-rad);
-  box-shadow: var(--app-box-shadow);
-  padding: 5px;
-  color: var(--clr-drk);
-  font-size: var(--font-size-reg);
-  font-weight: 600;
-  justify-content: center;
-  display: flex;
-  position: relative;
-  transition: var(--app-transition);
-  cursor: pointer;
-}
-
-.btn.secondary {
-  background-color: var(--clr-drk);
-  color: var(--clr-light-blue);
-}
-
-.btn:hover {
-  filter: brightness(1.3);
-}
-
-.btn:active {
-  background-color: #c85000;
-}
-
-.btn.secondary:hover{
-  filter: brightness(1.8);
-}
-
-.icon-hover {
-  transition: var(--app-transition);
-}
-
-.icon-hover:hover {
-   filter: brightness(1.3);
 }
