--- a/src/css/pages/partial-pages.css
+++ b/src/css/pages/partial-pages.css
@@ -99,25 +99,38 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  color: var(--clr-light-blue);
+}
+.collaboration-list h3 {
+  font-size: var(--font-size-subtitle);
+  margin-bottom: 50px;;
 }
 .collaboration-list ul {
   font-size: var(--font-size-reg);
+  margin-bottom: var(--app-spacing);
 }
 .collaboration-list li {
   margin-bottom: 5px;
+}
+.collaboration-list a{
+  color: var(--clr-light-blue);
+  transition: var(--app-transition);
+}
+.collaboration-list a:hover{
+  color: var(--clr-primary);
 }
 /*----------------------------------------------------------->
   About Page (with article.css)
 <------------------------------------------------------------*/
 .about-contact {
-  font-size: var(--font-size-subtitle);
   text-align: center;
   cursor: pointer;
+  color: var(--clr-light-blue);
+  margin-bottom: var(--app-spacing);
+  font-size: var(--font-size-reg);
 }
 .about-contact a {
-  color: var(--clr-light-blue);
   transition: var(--app-transition);
-  margin-bottom: var(--app-spacing);
 }
 .about-contact a:hover {
   color: var(--clr-primary);
