Fixes found from mobile testing

--- a/src/css/pages/portfolio.css
+++ b/src/css/pages/portfolio.css
@@ -46,7 +46,7 @@ a {
   align-items: center;
 }
 .portfolio-form {
-  height: 58vh;
+  height: 55svh;
   display: flex;
   flex-direction: column;
   align-items: center;
