--- a/src/css/pages/partial-pages.css
+++ b/src/css/pages/partial-pages.css
@@ -80,9 +80,11 @@
   color: var(--clr-light-blue);
 }
 .easter-egg h4 {
+  text-align: center;
   font-size: var(--font-size-subtitle);
 }
 .easter-egg p {
+  text-align: center;
   font-size: var(--font-size-reg);
   margin-bottom: var(--app-spacing);
 }
@@ -113,6 +115,7 @@
   margin-bottom: 5px;
 }
 .collaboration-list a{
+  text-align: center;
   color: var(--clr-light-blue);
   transition: var(--app-transition);
 }
