Final fixes to sizing and connections (hopefully)

--- a/src/css/pages/splash-page.css
+++ b/src/css/pages/splash-page.css
@@ -229,6 +229,7 @@ h4 {
 }
 .splash-info-btn-wrapper.open {
   gap: 0;
+  height: 600px;
 }
 .splash-info-btn-wrapper.open > *:not(.expanded) {
   flex: 0;
