--- a/src/css/pages/splash-page.css
+++ b/src/css/pages/splash-page.css
@@ -312,6 +312,9 @@ h4 {
   flex-wrap: wrap;
   gap: 10px;
 }
+.reviews-list img {
+  width: 95svw;
+}
 /*----------------------------------------------------------->
   Media Queries
 <------------------------------------------------------------*/
