--- a/src/css/common/footer.css
+++ b/src/css/common/footer.css
@@ -3,6 +3,7 @@ footer {
   background-color: var(--clr-drk);
   font-size: var(--font-size-reg);
   color: var(--clr-light-blue);
+  padding: var(--app-spacing) 0;
 }
 
 .footer-columns {
