--- a/src/css/common/article.css
+++ b/src/css/common/article.css
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   color: var(--clr-light-blue);
   font-size: var(--font-size-reg);
   padding: var(--app-spacing);
@@ -30,7 +31,7 @@
 }
 .about-hex {
   clip-path: var(--app-clip-hex);
-  width: 390px;
+  width: 290px;
   aspect-ratio: 1/1;
 }
 
