Final touch fixes

--- a/src/css/pages/partial-pages.css
+++ b/src/css/pages/partial-pages.css
@@ -126,6 +126,8 @@
   About Page (with article.css)
 <------------------------------------------------------------*/
 .about-contact {
+  display: flex;
+  flex-direction: column;
   text-align: center;
   cursor: pointer;
   color: var(--clr-light-blue);
