--- a/src/css/common/footer.css
+++ b/src/css/common/footer.css
@@ -13,7 +13,9 @@ footer {
   margin: 0 auto;
   border-top: 1px solid var(--clr-light);
 }
-
+.footer-column ul {
+  font-size: var(--font-size-small);
+}
 .footer-column {
   flex: 1;
   min-width: 200px;
@@ -31,7 +33,7 @@ footer {
   align-items: center;
   margin: 0 auto;
   border-top: 1px solid var(--clr-light);
-  font-size: var(--font-size-small);
+  font-size: 0.6rem;
   color: var(--clr-light);
 }
 
